--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "vente-tech": "file:",
+    "web-vitals": "^2.1.4",
+    "web-vitals-reporter": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
